apps/acmevault/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmevault
  labels:
    app: acmevault
    app.kubernetes.io/name: acmevault
    app.kubernetes.io/instance: acmevault-prod
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: acmevault
  template:
    metadata:
      labels:
        app: acmevault
        app.kubernetes.io/name: acmevault
        app.kubernetes.io/instance: acmevault-prod
      annotations:
        prometheus.io/port: "9191"
        prometheus.io/scrape: "true"
    spec:
      securityContext:
        runAsUser: 65535
        runAsGroup: 65535
        fsGroup: 65535
        runAsNonRoot: true
        seccompProfile:
          type: "RuntimeDefault"
      containers:
        - name: acmevault
          image: "ghcr.io/soerenschneider/acmevault:1.14.0"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            privileged: false
            runAsNonRoot: true
            runAsUser: 65535
            runAsGroup: 65535
            capabilities:
              drop:
                - "ALL"
            seccompProfile:
              type: "RuntimeDefault"
          command:
            - "/acmevault"
            - "-config"
            - "/config/acmevault-config.yaml"
          ports:
            - containerPort: 9191
              name: "metrics"
          resources:
            requests:
              memory: "32Mi"
              cpu: "5m"
            limits:
              memory: "128Mi"
          volumeMounts:
            - name: "config-volume"
              mountPath: "/config"
      volumes:
        - name: "config-volume"
          configMap:
            name: "config"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 10
              preference:
                matchExpressions:
                  - key: "cpu_speed"
                    operator: "NotIn"
                    values:
                      - "fast"
